apt (0.8.16~exp12ubuntu10) UNRELEASEDprecise-proposed; urgency=low

  [ Malcolm Scott ]
  * apt-pkg/packagemanager.cc:
    - Fix a regression in the pre-depend handling: where a pre-depend option
      other than the first specified is already installed, apt-get enters an
      infinite loop (LP: #985852)

 -- Malcolm Scott <launchpad@malc.org.uk>  Thu, 19 Apr 2012 19:52:56 +0100

apt (0.8.16~exp12ubuntu9) precise-proposed; urgency=low

  * apt-inst/contrib/extracttar.cc:
    - ensure that in StartGzip the InFd is set to "AutoClose" to ensure
      that the pipe is closed when InFd is closed. This fixes a Fd leak
      (LP: #985452)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 19 Apr 2012 11:38:43 +0200

apt (0.8.16~exp12ubuntu8) precise; urgency=low

  * Set FD_CLOEXEC on history.log's FD (Closes: #610069, LP: #636010)

 -- Adam Conrad <adconrad@ubuntu.com>  Thu, 12 Apr 2012 16:26:20 -0600

apt (0.8.16~exp12ubuntu7) precise; urgency=low

  * clean up obsolete conffile /etc/apt/apt.conf.d/01ubuntu, which was
    dropped in maverick.
  * Build-depend on gettext:any for cross-building support.
  * Don't treat build-depends-indep as cross-build-dependencies; we should
    always install the host arch versions.  LP: #968828.
  * Makefile, po/makefile:  make sure our pot generation datestamp doesn't
    change at build time, since this makes translations fail to be
    co-installable with multiarch.  Based on a patch by David Kalnischkies.
    Closes: #659333, LP: #924628.
  * For cross-build-dependencies, Architecture: all packages should be
    treated as implicitly Multi-Arch: foreign, because either they *are*
    M-A: foreign when used as a build-dependency, or they need to be updated
    to not be Architecture: all; and since cross-build-deps are new
    functionality in apt, we can safely make this change without breaking
    existing systems.  Closes: #666772.

 -- Steve Langasek <steve.langasek@ubuntu.com>  Thu, 05 Apr 2012 18:00:23 -0700
